# sds-mcp-server

./: CLICKUP_TASK_GUIDELINES.md  Dockerfile  README.md  cache.py  config.py  constants.py  helper.py  main.py  models.py  pyproject.toml  requirements.txt  search.py  tools.py  utils.py
.claude/: CLAUDE.md
.claude/rules/: clickup-tasks.md  code-style.md  git-workflow.md  mcp-patterns.md
.claude/skills/create-pr/: SKILL.md
.github/workflows/: deploy.yaml
templates/: login.html  upload.html  upload_product_list.html
